[gd_scene load_steps=2 format=3 uid="uid://deuke0rqgojio"]

[ext_resource type="Script" path="res://scenes/test.gd" id="1_vdes7"]

[node name="MainFrame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vdes7")

[node name="Button" type="Button" parent="."]
layout_mode = 1
offset_right = 200.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 40
text = "Select"

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
position = Vector2i(8, 139)
size = Vector2i(1135, 501)
min_size = Vector2i(0, 70)
ok_button_text = "Open"
file_mode = 0
access = 2

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 224.0
offset_right = 424.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 40
text = "Start File"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
